<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nolt</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">用户名: </string>
    <string name="password">密码: </string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="title_activity_memo_list">MemoListActivity</string>
    <string name="memo_list">所有笔记</string>
    <string name="new_memo">新建笔记</string>
    <string name="title_activity_new_memo">NewMemoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">保存</string>

</resources>
